# pginsight

./: .gitignore  Cargo.toml  Makefile  README.md
.github/workflows/: release.yml
homebrew/: pginsight.rb
src/: app.rs  cli.rs  connect.rs  export.rs  format.rs  main.rs  sql_format.rs  tui.rs
src/db/: activity.rs  locks.rs  mod.rs  overview.rs  replication.rs  statements.rs  stats.rs
src/ui/: activity.rs  help.rs  locks.rs  mod.rs  overview.rs  queries.rs  replication.rs  stats.rs
